# command-line-functions

./: pyproject.toml
db_auth/: main.py
open_git_in_browser/: main.py
